[package]
name = "options"
version = "0.1.0"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/options"
homepage = "https://github.com/stainless-steel/options"
documentation = "https://stainless-steel.github.io/options"
description = """
The package provides a data structure for managing named parameters.
"""
