[package]
name = "options"
version = "0.5.1"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a data structure for managing named parameters."
documentation = "https://docs.rs/options"
homepage = "https://github.com/stainless-steel/options"
repository = "https://github.com/stainless-steel/options"
